--- a/src/components/OrderPage/OrderPage.module.scss
+++ b/src/components/OrderPage/OrderPage.module.scss
@@ -6,7 +6,7 @@
 
 .orderMainContainer {
     width: calc(100% - 64px);
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
 }
